# grammar_dict

./: .flake8  .gitignore  README.md  bunpro_entries.csv  bunpro_entries.json  const.py  dataframe_generator.py  develop_dict.ipynb  dict_generator.py  exploring.ipynb  json_generator.py  pos.txt  pyproject.toml  quick_zip.py  scraped_da.html  scraped_page.html
dictionary_construction/: Entry.py  const.py  create_dictionary.py  dataframe_generator.py  json_generator.py
dictionary_files/: index.json  term_bank_1.json  term_bank_2.json  term_bank_3.json  term_bank_4.json
grammar_pages/: %E3%81%82%E3%81%8F%E3%81%BE%E3%81%A7%E3%82%82.html  %E3%81%82%E3%81%92%E3%81%8F.html  %E3%81%82%E3%81%92%E3%82%8B.html  %E3%81%82%E3%81%9D%E3%81%93.html  %E3%81%82%E3%81%A3%E3%81%A6%E3%81%AE.html  %E3%81%82%E3%81%A8%E3%81%A7.html  %E3%81%82%E3%81%AE.html  %E3%81%82%E3%81%BE%E3%82%8A%E3%81%AB.html  %E3%81%82%E3%81%BE%E3%82%8A-%E3%81%AA%E3%81%84.html  %E3%81%82%E3%81%BE%E3%82%8A.html  %E3%81%82%E3%82%8A.html  %E3%81%82%E3%82%8B%E3%81%84%E3%81%AF.html  %E3%81%82%E3%82%8C.html  %E3%81%84%E3%81%84.html  %E3%81%84%E3%81%8B%E3%81%AA%E3%82%8B.html  %E3%81%84%E3%81%8B%E3%82%93-%E3%81%9A.html  %E3%81%84%E3%81%8B.html  %E3%81%84%E3%81%8C%E3%81%84.html  %E3%81%84%E3%81%8D%E3%81%AA%E3%82%8A.html  %E3%81%84%E3%81%8F%E3%82%89-%E3%81%A7%E3%82%82.html  %E3%81%84%E3%81%9F%E3%81%99.html  %E3%81%84%E3%81%A4%E3%81%AE%E9%96%93%E3%81%AB%E3%81%8B.html  %E3%81%84%E3%82%88%E3%81%84%E3%82%88.html  %E3%81%84%E3%82%89%E3%81%A3%E3%81%97%E3%82%83%E3%82%8B.html  %E3%81%84%E3%82%8F%E3%82%86%E3%82%8B.html  (+888 more)
(+13 files in other folders)
