# pyproject.toml

[tool.poetry]
name = "web-scraper"
version = "0.1.0"
description = "A web scraper for extracting grammar points from a website."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

# Define where your source code is located
packages = [
    { include = "scraper" }
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
fake-useragent = "^1.0.1"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
