# pyproject.toml

[tool.poetry]
name = "Bunpro-dictionary"
version = "0.1.0"
description = "Create a Bunpro dictionary by scraping the website"
authors = ["n0luck13"]
license = "MIT"

# Define where your source code is located
packages = [
    { include = "scraper" }
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
fake-useragent = "^1.0.1"
pandas = "*"
toml = "^0.10.2"
tqdm = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
